--- a/.github/workflows/cats-dogs-other.yaml
+++ b/.github/workflows/cats-dogs-other.yaml
@@ -16,6 +16,7 @@ jobs:
       - name: Upgrade pip, install packages and run unittests
         run: |
           pip install --upgrade pip
+          chmod 777
           ./init_packages.sh
           pip install -r ./cats_dogs_other/requirements.txt
           pip install -r ./cats_dogs_other/label/requirements.txt
