--- a/.github/workflows/cats-dogs-other.yaml
+++ b/.github/workflows/cats-dogs-other.yaml
@@ -16,11 +16,11 @@ jobs:
       - name: Upgrade pip, install packages and run unittests
         run: |
           pip install --upgrade pip
-          chmod 777
+          chmod 777 init_packages.sh
           ./init_packages.sh
           pip install -r ./cats_dogs_other/requirements.txt
           pip install -r ./cats_dogs_other/label/requirements.txt
-          chmod 777
+          
           python -m unittest
       - name: Install mlflow
         run: |
